--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<!-- Your code here -->
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <link rel="stylesheet" type="test/css" href="style.css">
+        <title>My Site Title</title>
+    </head>
+        <body><!--This is a comment! --(Next time explain the concept of trailing white spaces as well. :\)-->
+
+        </body>
+</html>
